// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ProfilePicture should match snapshot, no user specified, default props 1`] = `
<span
  className="status-wrapper"
>
  <img
    alt=""
    className="more-modal__image"
    height="36"
    src="http://example.com/image.png"
    width="36"
  />
  <StatusIcon
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, no user specified, overridden props 1`] = `
<span
  className="status-wrapper"
>
  <img
    alt=""
    className="more-modal__image"
    height="48"
    src="http://example.com/image.png"
    width="48"
  />
  <StatusIcon
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, user specified 1`] = `
<span
  className="status-wrapper"
>
  <img
    alt=""
    className="more-modal__image"
    height="36"
    src="http://example.com/image.png"
    width="36"
  />
  <StatusIcon
    className=""
    status="away"
  />
</span>
`;

exports[`components/ProfilePicture should match snapshot, user specified, overridden props 1`] = `
<span
  className="status-wrapper"
>
  <img
    alt=""
    className="more-modal__image"
    height="48"
    src="http://example.com/image.png"
    width="48"
  />
  <StatusIcon
    className=""
    status="away"
  />
</span>
`;
